# Langgraph_Deepresearch

SHIVI_AWS_BEDROCK/: .gitignore  CLAUDE.md  My_Notes_Understanding.md  README.md  agents_info.md  langgraph.json  pyproject.toml
SHIVI_AWS_BEDROCK/notebooks/: 1_scoping.ipynb  2_research_agent.ipynb  3_research_agent_mcp.ipynb  4_research_supervisor.ipynb  5_full_agent.ipynb
SHIVI_AWS_BEDROCK/src/Shivi_DeepResearch_Agent/: multi_agent_supervisor.py  research_agent.py  research_agent_full.py  research_agent_mcp.py  research_agent_scope.py  state_scope.py  utils.py
SHIVI_AWS_BEDROCK/src/deep_research_from_scratch/: prompts.py  research_agent_scope.py  state_scope.py
